[metadata]

name = MeTEA
version = 0.0.3
author = Melissa Gray
author_email = mag535@drexel.edu
description = A package to parse, organize, calculate, and save data from metagenomic profile files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mag535/MeTEA/
classifiers =
	Operating System :: OS Independent
	Intended Audience :: Science/Research
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find: requirements.txt
python_requires = >=3.7
